# ScramJet

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
python/: csjarray.pxd  setup.py  sjarray.pyx  test.py
src/: Makefile.am  main.c  sjalloc.c  sjalloc.h  sjarray.c  sjarray.h  sjfunctions.c  sjfunctions.h  sjindex.h  sjvector.c  sjvector.h
